chrome extuzz executiuzz (chrome extension execution)

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width+device-width, initial-scale=1.0">
         <title>Document</title>
+        <script src="popup.js" defer></script>
+        <style>
+            body { width: 250px; font-family: Arial, sans-serif; text-align: center; padding: 10px; }
+            button { width: 100%; padding: 8px; margin-top: 10px; }
+        </style>
     </head>
     <body>
         <div id="root"></div>
         <script src="./react.js"></script>
+        <h2>Login with Spotify</h2>
+    <button id="changeColor">Change Background</button>
     </body>
 </html>
